--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.10.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1",
     "serve": "^14.2.4"
   },
   "devDependencies": {
